fixed scrollbar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,19 +7,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: visible;
   overflow-x: hidden;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-  scroll-behavior: smooth;
-  &::-webkit-scrollbar{
-    display: none;
-  }
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
-.noScroll{
+*{
   -ms-overflow-style: none;
-  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
 }
 main{
   flex: 1;
